--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4.0.0
         with:
           repository: apache/tomcat # Repository name with owner
-          ref: master # The branch, tag or SHA to checkout
+          ref: main # The branch, tag or SHA to checkout
           path: ./tomcat # Relative path under $GITHUB_WORKSPACE
       - name: Setup Java 9
         uses: actions/setup-java@v3.12.0
