--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -5,20 +5,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out tomcat-users.xml
-        uses: actions/checkout@v4.0.0
+        uses: actions/checkout@v4
       - name: List project files and java version
         run: |
           ls -ltr
           java -version
       - name: Check out Apache Tomcat
-        uses: actions/checkout@v4.0.0
+        uses: actions/checkout@v4
         with:
           repository: apache/tomcat # Repository name with owner
           ref: main # The branch, tag or SHA to checkout
           path: ./tomcat # Relative path under $GITHUB_WORKSPACE
       - name: Setup Java 9
-        uses: actions/setup-java@v3.12.0
+        uses: actions/setup-java@v3
         with:
+          distribution: 'oracle'
           java-version: '9.0.4' # The JDK version to make available on the path
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
