--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -5,13 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out tomcat-users.xml
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: List project files and java version
         run: |
           ls -ltr
           java -version
       - name: Check out Apache Tomcat
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
           repository: apache/tomcat # Repository name with owner
           ref: main # The branch, tag or SHA to checkout
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Java 9
         uses: actions/setup-java@v3
         with:
-          distribution: 'oracle'
+          distribution: 'temurin'
           java-version: '9.0.4' # The JDK version to make available on the path
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
