--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -17,9 +17,9 @@ jobs:
           ref: main # The branch, tag or SHA to checkout
           path: ./tomcat # Relative path under $GITHUB_WORKSPACE
       - name: Setup Java 9
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v1
         with:
-          distribution: 'zulu'
+          # distribution: 'zulu'
           java-version: '9.0.4' # The JDK version to make available on the path
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
